src/index.css
@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@100;300;400;700;900&family=Exo:wght@100;300;400;700;900&family=Martian+Mono:wght@100;400;500;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --black-gradient: linear-gradient(144.39deg, #ffffff -278.56%, #6d6d6d -78.47%, #11101d 91.61%);
  --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
}

* {
  scroll-behavior: smooth;
}

.cursor {
  pointer-events: none;
  position: fixed;
  height: 32px;
  width: 32px;
  border-radius: 50%;
  background-color: white;
  top: 0;
  left: 0;
}

/* text sizes */
h0 {
  font-family: "Martian Mono", sans-serif;
  font-weight: 700;
  font-size: 120px;
  line-height: 20px;
}

h1 {
  font-family: "Martian Mono", sans-serif;
  font-weight: 700;
  font-size: 48px;
  line-height: 56px;
  letter-spacing: -0.05em;
}

h2 {
  font-family: "Martian Mono", sans-serif;
  font-weight: 700;
  font-size: 24px;
  line-height: 24px;
  letter-spacing: -0.05em;
}

h3 {
  font-family: "Martian Mono", sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 44px;
  letter-spacing: -0.05em;
}

p {
  font-family: "Martian Mono", sans-serif;
  font-weight: 400; /* Normal text weight */
  font-size: 12px; /* Standard text size */
  line-height: 18px; /* Standard line height */
}

